# unvar

./: README.md  unvar.cabal
src/: UnVar.hs
src/Control/Monad/: Unify.hs
src/Control/Monad/Trans/: ST.hs
src/Control/Monad/Trans/ST/: Trail.hs
src/Control/Monad/Unify/: Atom.hs  Bool.hs
src/UnVar/: Ann.hs
tests/: simple.hs
