name:                unvar
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/sonyandy/unvar
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
-- copyright:           
category:            Plugin
build-type:          Simple
cabal-version:       >= 1.8

library
  hs-source-dirs: src
  exposed-modules: UnVar
  other-modules:
    Control.Monad.Trans.ST
    Control.Monad.Trans.ST.Trail
    Control.Monad.Unify
    Control.Monad.Unify.Atom
    Control.Monad.Unify.Bool
  build-depends:
    base >= 4 && < 5,
    ghc,
    transformers,
    logict,
    var
  other-extensions:
    FlexibleInstances,
    FunctionalDependencies,
    MultiParamTypeClasses,
    Rank2Types,
    TypeFamilies
  ghc-options: -Wall -fwarn-tabs

test-suite simple
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: simple.hs
  build-depends: base, var, unvar
  ghc-options: -Wall -fwarn-tabs -O2 -ddump-prep -dcore-lint
